<resources>
    <string name="app_name">Webinar</string>
    <string name="eliminar">Eliminar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="texto_nombre">Nombre del webinar</string>
    <string name="texto_apellido">Conferencista</string>
    <string name="texto_codigo">Fecha</string>
    <string name="texto_link">Link de registro</string>
    <string name="boton_guardar">GUARDAR</string>
    <string name="boton_listado">LISTADO</string>
    <string name="boton_eliminar">ELIMINAR</string>
</resources>
