<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_nombre"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtnombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_apellido"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtconferencista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_codigo"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtfecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/texto_link"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtlink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnguardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_guardar" />

    <Button
        android:id="@+id/btnlistado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_listado" />

    <Button
        android:id="@+id/btneliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_eliminar" />

</LinearLayout>
